facet-diff/tests/snapshots/diff_snapshots__diff_tuples_nested_different_sizes.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────╮
│((i32, i32), (i32, i32)) (     │
│  (i32, i32) (                 │
│    1,                         │
│    2,                         │
│  ),                           │
│  (i32, i32) (                 │
│    3,                         │
│    4,                         │
│  ),                           │
│)                              │
╰───────────────────────────────╯
╭After──────────────────────────╮
│((i32, i32, i32), (i32, i32)) (│
│  (i32, i32, i32) (            │
│    1,                         │
│    2,                         │
│    3,                         │
│  ),                           │
│  (i32, i32) (                 │
│    4,                         │
│    5,                         │
│  ),                           │
│)                              │
╰───────────────────────────────╯
╔Diff═══════════════════════════╗
║(                              ║
║    .. 2 unchanged items       ║
║    + 3                        ║
║)                              ║
║(                              ║
║    - 3                        ║
║    .. 1 unchanged item        ║
║    + 5                        ║
║)                              ║
╚═══════════════════════════════╝
