facet-diff/tests/snapshots/diff_snapshots__diff_tuples_one_element_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│(i32, i32, i32) (      │
│  1,                   │
│  2,                   │
│  3,                   │
│)                      │
╰───────────────────────╯
╭After──────────────────╮
│(i32, i32, i32) (      │
│  1,                   │
│  5,                   │
│  3,                   │
│)                      │
╰───────────────────────╯
╔Diff═══════════════════╗
║(                      ║
║    .. 1 unchanged item║
║    2 → 5              ║
║    .. 1 unchanged item║
║)                      ║
╚═══════════════════════╝
