facet-diff/tests/snapshots/diff_snapshots__diff_value_array_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│[           │
│  1,        │
│  2,        │
│  3,        │
│]           │
╰────────────╯
╭After───────╮
│[           │
│  1,        │
│  2,        │
│  3,        │
│]           │
╰────────────╯
╔Diff════════╗
║[           ║
║  1,        ║
║  2,        ║
║  3,        ║
║]           ║
╚════════════╝
