facet-diff/tests/snapshots/diff_snapshots__diff_value_array_nested_objects.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────────────╮
│[                             │
│  {                           │
│    id: 1,                    │
│    name: "Alice",            │
│  },                          │
│  {                           │
│    id: 2,                    │
│    name: "Bob",              │
│  },                          │
│]                             │
╰──────────────────────────────╯
╭After─────────────────────────╮
│[                             │
│  {                           │
│    id: 1,                    │
│    name: "Alicia",           │
│  },                          │
│  {                           │
│    id: 2,                    │
│    name: "Bob",              │
│  },                          │
│]                             │
╰──────────────────────────────╯
╔Diff══════════════════════════╗
║[                             ║
║  {                           ║
║    name: "Alice" → "Alicia"  ║
║  }                           ║
║  {                           ║
║    id: 2,                    ║
║    name: "Bob",              ║
║  }                           ║
║]                             ║
╚══════════════════════════════╝
