facet-diff/tests/snapshots/diff_snapshots__diff_value_array_of_objects_complex.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────╮
│[                              │
│  {                            │
│    id: 1,                     │
│    name: "Alice",             │
│    active: true,              │
│  },                           │
│  {                            │
│    id: 2,                     │
│    name: "Bob",               │
│    active: true,              │
│  },                           │
│  {                            │
│    id: 3,                     │
│    name: "Charlie",           │
│    active: false,             │
│  },                           │
│]                              │
╰───────────────────────────────╯
╭After──────────────────────────╮
│[                              │
│  {                            │
│    id: 1,                     │
│    name: "Alicia",            │
│    active: true,              │
│  },                           │
│  {                            │
│    id: 2,                     │
│    name: "Bob",               │
│    active: false,             │
│  },                           │
│  {                            │
│    id: 4,                     │
│    name: "Diana",             │
│    active: true,              │
│  },                           │
│]                              │
╰───────────────────────────────╯
╔Diff═══════════════════════════╗
║[                              ║
║  {                            ║
║    name: "Alice" → "Alicia"   ║
║  }                            ║
║  {                            ║
║    active: true → false       ║
║  }                            ║
║  {                            ║
║    active: false → true       ║
║    id: 3 → 4                  ║
║    name: "Charlie" → "Diana"  ║
║  }                            ║
║]                              ║
╚═══════════════════════════════╝
