facet-diff/tests/snapshots/diff_snapshots__diff_value_array_of_objects_vs_vec_of_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────╮
│[                     │
│  {                   │
│    name: "Alice",    │
│    age: 30,          │
│  },                  │
│  {                   │
│    name: "Bob",      │
│    age: 25,          │
│  },                  │
│]                     │
╰──────────────────────╯
╭After─────────────────╮
│Vec<OwnedUser> [      │
│  OwnedUser {         │
│    name: "Alice",    │
│    age: 30,          │
│  },                  │
│  OwnedUser {         │
│    name: "Bob",      │
│    age: 25,          │
│  },                  │
│]                     │
╰──────────────────────╯
╔Diff══════════════════╗
║[                     ║
║  (structurally equal)║
║  (structurally equal)║
║]                     ║
╚══════════════════════╝
