facet-diff/tests/snapshots/diff_snapshots__diff_value_array_vs_native_array_different_length.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before────────────────╮[0m
[38;2;86;95;137m│[0m[2m[[0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m1[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m2[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m3[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m4[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;255;158;100m5[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m][0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────╯[0m
[38;2;86;95;137m╭After─────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247m[i64; 3][39m[0m[2m [[0m            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;88;81m1[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;88;81m2[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;88;81m3[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m][0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────╯[0m
[38;2;224;175;104m╔Diff══════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m[[39m                     [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;86;95;137m.. 3 unchanged items[39m[38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;247;118;142m- 4[39m                 [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;247;118;142m- 5[39m                 [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m][39m                     [38;2;224;175;104m║[0m
[38;2;224;175;104m╚══════════════════════╝[0m
